2008-01-11  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.h
	  src/applet-dialogs.c
		- New files; move info and about dialog stuff here

	* src/Makefile.am
	  po/POTFILES.in
		- Add applet-dialogs.c, applet-dialogs.h

	* src/applet.c
	  src/applet.h
	  src/wireless-dialog.c
		- Updates for split out dialogs stuff

2008-01-11  Dan Williams  <dcbw@redhat.com>

	Require GTK+ 2.10 or higher and libnotify 0.4.3 or higher.

	* src/vpn-properties/Makefile.am
	  src/Makefile.am
		- Remove pre-GTK+ 2.10 bits

	* configure.ac
		- Require GTK+ 2.10 or higher
		- Require libnotify 0.4.3 or higher

	* src/applet.h
	  src/applet.c
		- Unconditionalize libnotify support
		- Delete pre-GTK+ 2.10 code
		- Remove some unused variables like 'is_adhoc' and 'top_menu_item'
		- Rename nma_send_event_notification() -> applet_do_notify()

	* src/eggtrayicon.c
	  src/eggtrayicon.h
	  COPYING.LIB
	  po/POTFILES.in
		- Remove eggtrayicon; no longer used

2008-01-11  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.c
	  src/utils/utils.h
		- (utils_ether_addr_valid): new function

	* src/applet.c
		- (add_seen_bssid): ensure BSSID is valid before saving it

2008-01-02  Dan Williams  <dcbw@redhat.com>

	Patch from Chris Aillon

	* src/vpn-properties/nm-vpn-properties.c
		- (main): fix leak of Glade XML on shutdown (gnome.org #506849)

2007-12-31  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.glade
	  src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
		- Hook wireless security widgets up 	

2007-12-31  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.glade
		- Add wireless security page widget

	* src/connection-editor/Makefile.am
		- Add wireless security libraries and includes directory

	* src/connection-editor/nm-connection-editor.c
		- (nm_connection_editor_set_connection): add wireless security page for
			wireless connections