@@ -1,4 +1,11 @@
-2008-01-11  Dan Williams  <dcbw@redhat.com>
+2008-01-12  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- Rearrange constructor() and finalize() closer to the rest of the
+			applet GObject related functions, and move icons-related functions
+			there as well to reduce the need to prototypes.
+
+2008-01-12  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-dialogs.h
 	  src/applet-dialogs.c
